--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "pinia": "^2.0.14",
     "postcss": "^8.4.14",
+    "simple-icons": "^7.0.0",
     "tailwindcss": "^3.0.24",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15"
@@ -30,6 +31,7 @@
     "eslint-import-resolver-custom-alias": "^1.3.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-vue": "^8.0.1",
+    "eslint-plugin-vuejs-accessibility": "^1.2.0",
     "husky": "^8.0.1",
     "lint-staged": "^12.4.1",
     "typescript": "^4.5.4",
