--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "eslint": "^8.16.0",
     "eslint-import-resolver-custom-alias": "^1.3.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-tailwindcss": "^3.5.2",
     "eslint-plugin-vue": "^8.0.1",
     "eslint-plugin-vuejs-accessibility": "^1.2.0",
     "husky": "^8.0.1",
     "lint-staged": "^12.4.1",
+    "postcss-import": "^14.1.0",
+    "tailwindcss-padding-safe": "github:desaintflorent/tailwindcss-padding-safe",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
     "vue-tsc": "^0.34.15"
