--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "prebuild": "npm run checks",
+    "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint --ext .ts,.js,.vue .",
     "lint:fix": "npm run lint -- --fix",
     "types": "vue-tsc --noEmit",
+    "checks": "npm run types && npm run lint",
     "prepare": "husky install"
   },
   "dependencies": {
