--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prebuild": "npm run checks",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .ts,.js,.vue .",
+    "lint": "eslint --ignore-path .gitignore --ext .ts,.js,.vue .",
     "lint:fix": "npm run lint -- --fix",
     "types": "vue-tsc --noEmit",
     "checks": "npm run types && npm run lint",
