--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "iles dev --open",
     "prebuild": "npm run checks",
-    "build": "astro build",
-    "preview": "astro preview",
+    "build": "iles build",
+    "preview": "iles preview --open",
     "lint": "eslint --ignore-path .gitignore --ext .ts,.js,.vue .",
     "lint:fix": "npm run lint -- --fix",
     "types": "vue-tsc --noEmit",
@@ -18,26 +18,24 @@
     "vue": "^3.2.25"
   },
   "devDependencies": {
-    "@astrojs/vue": "^0.1.5",
-    "@typescript-eslint/eslint-plugin": "^5.25.0",
-    "@typescript-eslint/parser": "^5.25.0",
-    "@vue/eslint-config-airbnb": "^6.0.0",
+    "@rushstack/eslint-patch": "^1.1.3",
     "@vue/eslint-config-typescript": "^11.0.0",
-    "astro": "^1.0.0-beta.50",
+    "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.16.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-import-resolver-custom-alias": "^1.3.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-tailwindcss": "^3.5.2",
     "eslint-plugin-vue": "^9.1.1",
     "eslint-plugin-vuejs-accessibility": "^1.2.0",
     "husky": "^8.0.1",
+    "iles": "^0.7.40",
     "lint-staged": "^13.0.1",
     "postcss": "^8.4.14",
     "postcss-import": "^14.1.0",
     "tailwindcss": "^3.0.24",
-    "typescript": "^4.5.4",
-    "vue-tsc": "^0.37.8"
+    "typescript": "^4.7.4",
+    "vercel": "^25.1.0",
+    "vue-tsc": "^0.38.1"
   }
 }
