--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "pinia": "^2.0.14",
-    "reschume": "0.0.0-alpha.1",
+    "reschume": "^0.0.0-alpha.2",
     "simple-icons": "^7.0.0",
     "vue": "^3.2.25"
   },
