--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@rushstack/eslint-patch": "^1.1.3",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "@vueuse/core": "^8.9.1",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.16.0",
     "eslint-config-airbnb-base": "^15.0.0",
