Disallow warnings in ESLint

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -24,7 +24,7 @@ jobs:
         run: npm install --prefer-offline --no-audit
 
       - name: Lint the codebase
-        run: npm run lint
+        run: npm run lint -- --max-warnings 0
 
   types:
     name: Typecheck
