--- a/tsconfig.config.json
+++ b/tsconfig.config.json
@@ -3,6 +3,7 @@
   "include": ["vite.config.*"],
   "compilerOptions": {
     "composite": true,
-    "types": ["node"]
+    "types": ["node"],
+    "lib": ["esnext", "dom"]
   }
 }
