--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,3 +1,4 @@
 {
-  "*.{ts,js,vue}": "eslint --fix"
+  "*.{js,ts,vue}": ["eslint --fix", "prettier --write"],
+  "*.{css,html,json,md,pcss,yml}": ["prettier --write"]
 }
