--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "iles preview --open",
     "lint": "eslint --ignore-path .gitignore --ext .ts,.js,.vue .",
     "lint:fix": "npm run lint -- --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "types": "vue-tsc --noEmit",
     "checks": "npm run types && npm run lint",
     "prepare": "husky install"
@@ -29,6 +31,7 @@
     "autoprefixer": "^10.4.13",
     "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-tailwindcss": "^3.8.0",
     "eslint-plugin-vue": "^9.8.0",
@@ -38,6 +41,8 @@
     "lint-staged": "^13.1.0",
     "postcss": "^8.4.20",
     "postcss-import": "^15.1.0",
+    "prettier": "^2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
     "vue-tsc": "^1.0.19"
