Use TypeScript for Tailwind config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "components.d.ts",
     "composables.d.ts",
     "iles.config.ts",
+    "tailwind.config.ts",
     "src/**/*",
     "src/**/*.vue"
   ],
