Install, configure and style Prism blocks

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@islands/feed": "^0.8.1",
     "@islands/headings": "^0.8.2",
     "@islands/icons": "^0.8.0",
+    "@islands/prism": "^0.8.0",
     "@prettier/plugin-xml": "^2.2.0",
     "@rushstack/eslint-patch": "^1.4.0",
     "@vue/eslint-config-typescript": "^12.0.0",
