--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "lint-staged": "^13.3.0",
     "postcss": "^8.4.29",
     "postcss-import": "^15.1.0",
+    "postcss-nesting": "^12.0.1",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.2.8",
     "tailwindcss": "^3.3.3",
