--- a/package.json
+++ b/package.json
@@ -1,58 +1,29 @@
 {
-  "name": "portfolio-brut",
+  "name": "portfolio",
   "description": "My portfolio is my small personal slice of the Internet.",
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "iles dev",
-    "prebuild": "npm run checks",
-    "build": "iles build",
-    "preview": "iles preview --open",
     "lint": "eslint --ignore-path .gitignore --ext .ts,.js,.vue .",
     "lint:fix": "npm run lint -- --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "types": "vue-tsc --noEmit",
-    "checks": "npm run types && npm run lint",
+    "checks": "npm run lint && npm run format:check",
     "prepare": "husky install"
   },
-  "dependencies": {
-    "axios": "^1.5.0",
-    "pinia": "^2.1.6",
-    "reschume": "^0.0.0-alpha.3",
-    "vue": "^3.2.47"
-  },
   "devDependencies": {
-    "@iconify-json/heroicons-outline": "^1.1.7",
-    "@iconify-json/simple-icons": "^1.1.70",
-    "@islands/excerpt": "^0.9.0",
-    "@islands/feed": "^0.8.1",
-    "@islands/headings": "^0.8.2",
-    "@islands/icons": "^0.8.0",
-    "@islands/prism": "^0.8.0",
-    "@prettier/plugin-xml": "^2.2.0",
+    "@prettier/plugin-xml": "^3.2.1",
     "@rushstack/eslint-patch": "^1.4.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/tsconfig": "^0.1.3",
-    "@vueuse/core": "^9.13.0",
-    "autoprefixer": "^10.4.15",
+    "@vue/eslint-config-airbnb-with-typescript": "^7.0.0",
+    "@vue/eslint-config-prettier": "^8.0.0",
     "eslint": "^8.49.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-import-resolver-typescript": "^3.6.0",
-    "eslint-plugin-tailwindcss": "^3.13.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "eslint-plugin-vuejs-accessibility": "^2.2.0",
     "husky": "^8.0.3",
-    "iles": "^0.9.2",
     "lint-staged": "^13.3.0",
-    "postcss": "^8.4.29",
-    "postcss-import": "^15.1.0",
-    "postcss-nesting": "^12.0.1",
     "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.2.8",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^4.9.5",
-    "vue-tsc": "^1.8.11"
-  }
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "typescript": "^4.9.5"
+  },
+  "workspaces": [
+    "packages/website"
+  ]
 }
