--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "version": "0.0.0",
   "scripts": {
     "lint": "eslint --ignore-path .gitignore --ext .ts,.js,.vue .",
-    "lint:fix": "npm run lint -- --fix",
+    "lint:fix": "pnpm run lint -- --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "checks": "npm run lint && npm run format:check",
+    "checks": "pnpm run lint && pnpm run format:check",
     "prepare": "husky install"
   },
   "devDependencies": {
@@ -22,8 +22,5 @@
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "typescript": "^4.9.5"
-  },
-  "workspaces": [
-    "packages/website"
-  ]
+  }
 }
