--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -27,6 +27,7 @@
     "postcss": "^8.4.29",
     "postcss-import": "^15.1.0",
     "postcss-nesting": "^12.0.1",
+    "recivi": "workspace:^",
     "reschume": "0.0.0-alpha.3",
     "tailwindcss": "^3.3.3",
     "vue-tsc": "^1.8.11"
