--- a/packages/recivi/package.json
+++ b/packages/recivi/package.json
@@ -3,6 +3,22 @@
   "description": "récivi is a comprehensive schema for documenting résumés.",
   "private": false,
   "version": "0.0.0",
-  "dependencies": {},
-  "devDependencies": {}
+  "scripts": {
+    "gen": "ts-json-schema-generator -f tsconfig.json --type Resume --no-top-ref > dist/recivi.schema.json",
+    "build": "node src/scripts/barrel.mjs && tsup src/index.ts --dts",
+    "types": "tsc --noEmit"
+  },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "dependencies": {
+    "chalk": "^5.3.0"
+  },
+  "devDependencies": {
+    "glob": "^10.3.5",
+    "ts-json-schema-generator": "^1.3.0",
+    "tsup": "^7.2.0"
+  }
 }
