--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "lint": "eslint --ignore-path .gitignore --ext .ts,.js,.vue .",
+    "lint": "eslint --ignore-path .gitignore --ext .ts,.js,.mjs,.astro .",
     "lint:fix": "pnpm run lint -- --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
@@ -12,15 +12,16 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@prettier/plugin-xml": "^3.2.1",
-    "@rushstack/eslint-patch": "^1.4.0",
-    "@vue/eslint-config-airbnb-with-typescript": "^7.0.0",
-    "@vue/eslint-config-prettier": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.49.0",
+    "eslint-plugin-astro": "^0.31.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.3.0",
-    "prettier": "^3.0.3",
+    "prettier": "^3.1.1",
+    "prettier-plugin-astro": "^0.12.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
-    "typescript": "^4.9.5"
-  }
+    "typescript": "^5.1.6"
+  },
+  "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1"
 }
