--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -15,6 +15,8 @@
     "@astrojs/mdx": "^3.1.8",
     "@astrojs/rss": "^4.0.8",
     "@astrojs/tailwind": "^5.1.2",
+    "@iconify-json/lucide": "^1.2.10",
+    "@iconify-json/simple-icons": "^1.2.9",
     "@types/node": "^18.19.5",
     "@vercel/og": "^0.6.2",
     "astro": "^4.16.2",
