--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -11,14 +11,17 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/alpinejs": "^0.4.0",
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^3.1.8",
     "@astrojs/rss": "^4.0.8",
     "@astrojs/tailwind": "^5.1.2",
     "@iconify-json/lucide": "^1.2.10",
     "@iconify-json/simple-icons": "^1.2.9",
+    "@types/alpinejs": "^3.13.10",
     "@types/node": "^18.19.5",
     "@vercel/og": "^0.6.2",
+    "alpinejs": "^3.14.3",
     "astro": "^4.16.2",
     "recivi": "workspace:^",
     "tailwindcss": "^3.4.0"
