--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -24,6 +24,7 @@
     "alpinejs": "^3.14.3",
     "astro": "^4.16.2",
     "recivi": "workspace:^",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.0",
+    "tailwindcss-safe-area": "^0.6.0"
   }
 }
