--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "checks": "pnpm run lint && pnpm run format:check",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.1",
-    "@eslint/js": "^9.13.0",
+    "@eslint/compat": "^1.2.4",
+    "@eslint/js": "^9.16.0",
     "@types/eslint__js": "^8.42.3",
-    "eslint": "^9.13.0",
-    "eslint-plugin-astro": "^1.3.0",
-    "globals": "^15.11.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.3.0",
-    "prettier": "^3.1.1",
-    "prettier-plugin-astro": "^0.12.3",
-    "prettier-plugin-tailwindcss": "^0.5.4",
-    "typescript": "^5.1.6",
-    "typescript-eslint": "^8.11.0"
+    "eslint": "^9.16.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "globals": "^15.13.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.4.2",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.17.0"
   },
-  "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1"
+  "packageManager": "pnpm@9.15.0"
 }
