--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -24,6 +24,7 @@
     "alpinejs": "^3.14.7",
     "astro": "^5.0.3",
     "recivi": "workspace:^",
+    "satori-html": "^0.3.2",
     "tailwindcss": "^3.4.16",
     "tailwindcss-safe-area": "^0.6.0"
   }
