--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "dev": "astro dev --host",
     "check": "astro check",
-    "build": "astro build",
-    "preview": "astro preview --host",
-    "astro": "astro"
+    "build": "astro build && pnpm print",
+    "preview": "astro preview --host --port 4322",
+    "astro": "astro",
+    "print": "start-server-and-test preview http://localhost:4322/ 'node src/scripts/print.mjs'"
   },
   "dependencies": {
     "@astrojs/alpinejs": "^0.4.0",
@@ -23,8 +24,11 @@
     "@vercel/og": "^0.6.4",
     "alpinejs": "^3.14.7",
     "astro": "^5.0.3",
+    "chalk": "^5.3.0",
+    "puppeteer": "^23.11.1",
     "recivi": "workspace:^",
     "satori-html": "^0.3.2",
+    "start-server-and-test": "^2.0.9",
     "tailwindcss": "^3.4.16",
     "tailwindcss-safe-area": "^0.6.0"
   }
