Move website into the repository root

--- a/package.json
+++ b/package.json
@@ -9,7 +9,34 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "checks": "pnpm run lint && pnpm run format:check",
-    "prepare": "husky"
+    "prepare": "husky",
+    "dev": "astro dev --host",
+    "check": "astro check",
+    "build": "astro build && pnpm print",
+    "preview": "astro preview --host --port 4322",
+    "astro": "astro",
+    "print": "start-server-and-test preview http://localhost:4322/ 'node src/scripts/print.mjs'"
+  },
+  "dependencies": {
+    "@astrojs/alpinejs": "^0.4.1",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/mdx": "^4.0.4",
+    "@astrojs/rss": "^4.0.11",
+    "@astrojs/tailwind": "^5.1.4",
+    "@iconify-json/lucide": "^1.2.22",
+    "@iconify-json/simple-icons": "^1.2.19",
+    "@types/alpinejs": "^3.13.11",
+    "@types/node": "^22.10.1",
+    "@vercel/og": "^0.6.4",
+    "alpinejs": "^3.14.7",
+    "astro": "^5.1.4",
+    "chalk": "^5.3.0",
+    "puppeteer": "^23.11.1",
+    "recivi": "workspace:^",
+    "satori-html": "^0.3.2",
+    "start-server-and-test": "^2.0.9",
+    "tailwindcss": "^3.4.16",
+    "tailwindcss-safe-area": "^0.6.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.4",
