Update references to Récivi

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@astrojs/tailwind": "^5.1.4",
     "@iconify-json/lucide": "^1.2.22",
     "@iconify-json/simple-icons": "^1.2.19",
+    "@recivi/schema": "^0.0.1",
     "@types/alpinejs": "^3.13.11",
     "@types/node": "^22.10.1",
     "@vercel/og": "^0.6.4",
@@ -32,7 +33,6 @@
     "astro": "^5.1.4",
     "chalk": "^5.3.0",
     "puppeteer": "^23.11.1",
-    "recivi": "workspace:^",
     "satori-html": "^0.3.2",
     "start-server-and-test": "^2.0.9",
     "tailwindcss": "^3.4.16",
