Update hooks and scripts

--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "description": "My portfolio is my small personal slice of the Internet.",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
+    "prepare": "husky",
     "lint": "eslint .",
-    "lint:fix": "pnpm run lint --fix",
+    "lint:fix": "pnpm lint --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "checks": "pnpm run lint && pnpm run format:check",
-    "prepare": "husky",
-    "dev": "astro dev --host",
     "check": "astro check",
+    "dev": "astro dev --host",
     "build": "astro build && pnpm print",
     "preview": "astro preview --host --port 4322",
     "astro": "astro",
