--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "astro build && pnpm print",
     "preview": "astro preview --host --port 4322",
     "astro": "astro",
-    "print": "start-server-and-test preview http://localhost:4322/ 'node src/scripts/print.mjs'"
+    "print": "start-server-and-test preview http://localhost:4322/ 'tsx src/scripts/print.ts'"
   },
   "dependencies": {
     "@astrojs/alpinejs": "^0.4.1",
@@ -36,7 +36,8 @@
     "satori-html": "^0.3.2",
     "start-server-and-test": "^2.0.9",
     "tailwindcss": "^3.4.16",
-    "tailwindcss-safe-area": "^0.6.0"
+    "tailwindcss-safe-area": "^0.6.0",
+    "tsx": "^4.19.2"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.4",
