Setup reloading when the Récivi data file changes

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "alpinejs": "^3.14.7",
     "astro": "^5.1.4",
     "chalk": "^5.3.0",
+    "chokidar": "^4.0.3",
     "puppeteer": "^23.11.1",
     "satori-html": "^0.3.2",
     "start-server-and-test": "^2.0.9",
