--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^4.0.4",
     "@astrojs/rss": "^4.0.11",
-    "@astrojs/tailwind": "^5.1.4",
     "@iconify-json/lucide": "^1.2.22",
     "@iconify-json/simple-icons": "^1.2.19",
     "@recivi/schema": "^0.0.1",
+    "@tailwindcss/vite": "^4.0.0",
     "@types/alpinejs": "^3.13.11",
     "@types/node": "^22.10.1",
     "@vercel/og": "^0.6.4",
@@ -36,7 +36,7 @@
     "puppeteer": "^23.11.1",
     "satori-html": "^0.3.2",
     "start-server-and-test": "^2.0.9",
-    "tailwindcss": "^3.4.16",
+    "tailwindcss": "^4.0.0",
     "tailwindcss-safe-area": "^0.6.0",
     "tsx": "^4.19.2"
   },
@@ -51,7 +51,7 @@
     "lint-staged": "^15.2.10",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.9",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.17.0"
   },
